# convertible

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  manifest  packages.manifest  repositories.manifest
convertible/: buildfile  catch2_define_main.cxx  convertible.adapter.test.cxx  convertible.benchmark.cxx  convertible.concepts.test.cxx  convertible.hxx  convertible.mapping.test.cxx  convertible.mapping_table.test.cxx  convertible.operator.test.cxx  convertible.test.cxx  convertible_v2.hxx  convertible_v2.test.cxx  doctest_include.hxx  export.hxx  version.hxx.in
include/convertible/: convertible.hpp
libconvertible/: manifest
libconvertible-benchmarks/: manifest
libconvertible-benchmarks/libconvertible-benchmarks/: .gitignore  buildfile  convertible.benchmark.cxx
libconvertible-tests/: manifest
libconvertible-tests/libconvertible-tests/: .gitignore  adapter.test.cxx  buildfile  concepts.test.cxx  converters.test.cxx  convertible.adapter.test.cxx  convertible.concepts.test.cxx  convertible.mapping.test.cxx  convertible.mapping_table.test.cxx  convertible.operator.test.cxx  mapping.test.cxx  mapping_table.test.cxx  operator.test.cxx  std_concepts_ext.test.cxx  test_common.hxx
libconvertible/convertible/: adapter.hxx  buildfile  common.hxx  concepts.hxx  converters.hxx  convertible.hxx  mapping.hxx  mapping_table.hxx  operators.hxx  readers.hxx  std_concepts_compat.hxx  std_concepts_ext.hxx
old/: .travis.yml  conanfile.py
old/tests/: convertible_tests.cpp
tests/: convertible_tests.cpp
tests/basics/: buildfile  driver.cxx
